--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Taller de Biodieseño</h1>
+        <h1>Taller de Biodiseño</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
       </header>
 
