--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,13 @@
         <h1>Taller de Biodiseño</h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
       </header>
-
+<nav>
+            <ul>
+                  <li><a href="/">Inicio</a></li>
+                  <li><a href="/about">Acerca de mí</a></li>
+                  <li><a href="/project">Proyecto</a></li>
+                  <li><a href="/hw">Tareas</a></li>
+            </ul>
       <div id="banner">
         <span id="logo"></span>
 
