--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,14 @@
                   <li><a href="/project">Proyecto</a></li>
                   <li><a href="/hw">Tareas</a></li>
             </ul>
+            
+            
+            <ul>
+                  <li><a href="/">Inicio</a></li>
+                  <li><a href="/about">Acerca de mí</a></li>
+                  <li><a href="/project">Proyecto</a></li>
+                  <li><a href="/hw">Tareas</a></li>
+            </ul>
           </div>
         {% endif %}
       </div><!-- end banner -->
