--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,12 @@
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
-            <ul>
+           
+          </div>
+        {% endif %}
+      </div><!-- end banner -->
+    <div>
+    <ul>
               <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
               <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
                   <li><a href="/">Inicio</a></li>
@@ -38,18 +43,7 @@
                   <li><a href="/project">Proyecto</a></li>
                   <li><a href="/hw">Tareas</a></li>
             </ul>
-            
-            
-            <ul>
-                  <li><a href="/">Inicio</a></li>
-                  <li><a href="/about">Acerca de mí</a></li>
-                  <li><a href="/project">Proyecto</a></li>
-                  <li><a href="/hw">Tareas</a></li>
-            </ul>
-          </div>
-        {% endif %}
-      </div><!-- end banner -->
-
+</div>
     <div class="wrapper">
       <nav>
         <ul></ul>
